--- a/src/sass/pages/_careers.scss
+++ b/src/sass/pages/_careers.scss
@@ -120,6 +120,7 @@
 
 .position {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   gap: 15rem;
 
